public/css/core.css
@import url('https://fonts.cdnfonts.com/css/myriad-pro');

:root {
    /*
    color-scheme: light dark;
    --fg: light-dark(black, #eaeaea);
    --bg: light-dark(white, #1c1c1c);
    --bg-light: light-dark(#e3e3e3, #313131);
    --shadow: light-dark(#00000055, #f6f6f655);
    */

    --success: #07e33d;
    --error: rgb(215, 61, 61);
    --danger: rgb(227, 147, 36);

    --xxs: 3px;
    --xs: 6px;
    --s: 10px;
    --m: 16px;
    --l: 20px;
    --xl: 24px;
    --xxl: 32px;
}

/******************** discard existing *******************/

a {
    text-decoration: none;
    color: inherit;

    &:visited, &:hover {
        color: inherit;
    }
}

button {
    border: none;
    padding: 0;
    font-size: inherit;
}

input, select, textarea {
    background: none;
    border: none;
    width: 100%;
    font-family: inherit;
    font-size: inherit;

    &:focus {
        outline: none;
    }
}

h1, h2, h3, h4, h5, h6, p {
    margin: var(--s) 0 var(--xs);
}

/******************** fonts *******************/

* {
    font-family: 'Myriad Pro', sans-serif;
    font-weight: 300;

    & b, & strong {
        font-weight: 600;
    }
}

h1 {
    font-size: var(--xxl);
}

h2 {
    font-size: var(--xl);
}

h3 {
    font-size: var(--l);
}

/******************** colors *******************/

body {
    --fg: black;
    --bg: white;
    --bg-light: #e3e3e3;
    --shadow: #00000055;

    &.dark {
        --fg: #eaeaea;
        --bg: #1c1c1c;
        --bg-light: #313131;
        --shadow: #f6f6f655;
    }
}

.accent {
    color: var(--accent-color);

    &.background {
        background-color: var(--accent-color);
        color: white;
    }

    &.primary {
        --accent-color: var(--primary);
    }
    &.secondary {
        --accent-color: var(--secondary);
        &.background {
            color: black;
        }
    }
    &.tertiary {
        --accent-color: var(--tertiary);
    }
    &.success {
        --accent-color: var(--success);
    }
    &.danger {
        --accent-color: var(--danger);
    }
    &.error {
        --accent-color: var(--danger);
    }
}

.ghost {
    opacity: 0.5;
}

/******************** attributes *******************/

.bordered {
    border: var(--xxs) solid currentColor;
    box-sizing: border-box;
}

.disabled, :disabled {
    opacity: 0.5;
    pointer-events: none;
    cursor: not-allowed;
}

.full-width {
    & > .contents {
        max-width: 1280px;
        margin: 0 auto;
    }
}

span.large {
    font-size: var(--xl);
}

.padded {
    padding: var(--s) var(--m);
}

.placeholder {
    background: repeating-linear-gradient(-45deg, var(--bg-light), var(--bg-light) 10px, var(--tertiary) 10px, var(--tertiary) 20px);
}

.rounded, a:has(> .rounded) {
    border-radius: var(--s);
}

.shaded {
    box-shadow: 0 0 var(--s) var(--shadow);
}

/******************** animations *******************/

.animatable, .interactive {
    transition-duration: 0.3s;
    transition-timing-function: ease-out;
}

.interactive {
    cursor: pointer;

    &.highlight:hover {
        box-shadow: 0 0 var(--m) var(--shadow);
    }
    &.shift-right:hover {
        translate: var(--s);
    }
}
@media (prefers-reduced-motion: reduce) {
    .animatable, .interactive {
        transition: none;
    }
}

/******************** components *******************/

.alert {
    position: fixed;
    top: calc(-5 * var(--xl));
    left: 50%;
    translate: -50%;
    z-index: 1000;

    background-color: var(--bg);

    &.in {
        top: var(--xl);
    }
}

body {
    color: var(--fg);
    background-color: var(--bg);
    font-size: var(--m);
    margin: 0;
    padding: 0;

    min-height: 100vh;
    flex-wrap: nowrap;

    font-size: var(--m);
}

.button {
    background-color: var(--primary);
    color: white;

    &.phantom {
        background-color: transparent;
        color: var(--fg);
    }
}

.flex {
    display: flex;
    flex-wrap: wrap;

    &.right {
        flex-direction: row;
    }
    &.down {
        flex-direction: column;
    }

    &.spread {
        justify-content: space-between;
    }
    &.nowrap {
        flex-wrap: nowrap;
    }
}

.grid {
    display: grid;
    grid-auto-flow: row;
    grid-template-columns: repeat(var(--col-count), 1fr);

    &.right {
        grid-auto-flow: column;
        grid-template-columns: none;
        grid-template-rows: repeat(var(--col-count), 1fr);
    }
}

.flex, .grid {
    gap: var(--s);

    &.big-gap {
        gap: var(--l);
    }

    &.center {
        justify-content: center;
    }
    &.middle {
        align-items: center;
    }
}

.icon {
    height: 1.5em;
    vertical-align: middle;

    &.large {
        height: 3em;
    }
}

.input {
    border: var(--xxs) solid var(--bg-light);
    grid-template-columns: auto auto 1fr;
    flex-grow: 1;

    &:has(:focus) {
        border-color: var(--primary);
    }

    & [type="checkbox"] {
        accent-color: var(--primary);
        height: var(--m);
        width: var(--m);
    }

    & textarea {
        font-family: monospace;
    }

    & select {
        & option {
            font-family: inherit;
            background-color: var(--bg);
        }
    }
}

.input, search form {
    &.rounded {
        border-radius: var(--xxl);
    }
}

.logo {
    height: calc(2 * var(--xxl));
}

.line-banner {
    text-align: center;

    &.large {
        height: 300px;
    }
}

main {
    flex-grow: 1;
}

search {
    & > form {
        grid-template-columns: 1fr auto !important;
    }

    & button {
        border-radius: var(--xxl) !important;
        padding: var(--xs);
    }
}

.side-content-container {
    grid-template-columns: auto 350px;

    & > .content:last-child {
        border-left: var(--xxs) solid var(--bg-light);
    }
}

.tile {

}

/******************** mobile *******************/

@media screen and (max-width: 850px) {
    .flex.right, .grid {
        &.but-mobile-down {
            display: flex;
            flex-direction: column;
        }
    }

    .side-content-container {
        grid-template-columns: auto;

        & > .content:last-child {
            border-left: none;
            border-top: var(--xxs) solid var(--bg-light);
        }
    }
}

